--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-
+---
+layout: default
+---
   <body>
 		<h1>COVID-19 as an opportunity for IT </h1>
 			<p>Experts prognose we will encounter more pandemics in the future as climate change progresses. Not to mention that the population is getting older. With that said, we have to adjust to this future and take on the opportunities given with this. You may ask yourself what this issue has to do with IT. Before I explain I’d like to state in advance that this is written from a German perspective with corresponding examples.</p>
