--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
   <body>
 	<h1>COVID-19 as an opportunity for IT </h1>
+	  <img src="https://www.imw.fraunhofer.de/de/forschung/digital-health/jcr:content/stage/stageParsys/stage_slide/image.img.4col.jpg/1633416237056/key-visual-digital-health.jpg" alt="Digital health system">
 		<h2>More pandemics coming</h2>
 		<p>Experts prognose we will encounter more pandemics in the future as climate change progresses. Not to mention that the population is getting older. With that in mind, we have to adjust to this future and take on the opportunities given with this. You may ask yourself what this issue has to do with IT. Before I explain I’d like to state in advance that this is written from a German perspective with corresponding examples.</p>
 		
